--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,29 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
-  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bowlby+One+SC&family=Faster+One&family=Fruktur&family=Josefin+Sans:wght@600&family=Kings&family=Luckiest+Guy&family=Nosifer&family=Sigmar+One&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bowlby+One+SC&family=Faster+One&family=Fruktur&family=Josefin+Sans:wght@600&family=Kings&family=Luckiest+Guy&family=Nosifer&family=Sigmar+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bowlby+One+SC&family=Faster+One&family=Fruktur&family=Josefin+Sans:wght@600&family=Kings&family=Luckiest+Guy&family=Nosifer&family=Poiret+One&family=Sigmar+One&display=swap" rel="stylesheet">	
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bowlby+One+SC&family=Faster+One&family=Fruktur&family=Josefin+Sans:wght@600&family=Kings&family=Luckiest+Guy&family=Mochiy+Pop+One&family=Nosifer&family=Poiret+One&family=Sigmar+One&display=swap" rel="stylesheet">
+  
   <style>
   .link{
 	  text-decoration: none;
 	  color: inherit;
   } 
 </style>
-  <title>Blog Exercise 1</title>  
+		<!-- For DrumMachine -->
+		<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+ <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
+ 
+  <title>Blog Exercise</title>  
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<!-- For DurmMachine -->
+		<script type="text/babel" src="./index.js"> </script>
+		<!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
 		<div id="root"></div>
 	</body>
 </html>
